// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots crd/CustomResourceDefinition Details 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h1
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
                >
                  CustomResourceDefinition
                </h1>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="false"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <dl
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Name
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    mydefinition.phonyresources.io
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Creation
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    2021-12-15T14:57:13.000Z
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Group
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    my.phonyresources.io
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Version
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    v1
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Scope
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    Namespaced
                  </span>
                </dd>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Accepted Names
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
                style="display: inline-block !important; height: 120px;"
              >
                <div
                  style="overflow: visible; height: 0px; width: 0px;"
                >
                  <div
                    aria-colcount="4"
                    aria-rowcount="1"
                    class="ReactVirtualized__Table makeStyles-table"
                    role="grid"
                  >
                    <div
                      class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                      role="row"
                      style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                    >
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Plural
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Singular
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Kind
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          List Kind
                        </div>
                      </div>
                    </div>
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                      role="rowgroup"
                      style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Versions
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
                style="display: inline-block !important; height: 120px;"
              >
                <div
                  style="overflow: visible; height: 0px; width: 0px;"
                >
                  <div
                    aria-colcount="3"
                    aria-rowcount="1"
                    class="ReactVirtualized__Table makeStyles-table"
                    role="grid"
                  >
                    <div
                      class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                      role="row"
                      style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                    >
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Name
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Served
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Storage
                        </div>
                      </div>
                    </div>
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                      role="rowgroup"
                      style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Conditions
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                >
                  No data to be shown.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Objects
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
                style="display: inline-block !important; height: 180px;"
              >
                <div
                  style="overflow: visible; height: 0px; width: 0px;"
                >
                  <div
                    aria-colcount="3"
                    aria-rowcount="2"
                    class="ReactVirtualized__Table makeStyles-table"
                    role="grid"
                  >
                    <div
                      class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                      role="row"
                      style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                    >
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Name
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Namespace
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                          role="cell"
                          style="text-align: right;"
                        >
                          Age
                          <button
                            aria-label="sort up"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <span />
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                      role="rowgroup"
                      style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Events
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
                style="display: inline-block !important; height: 120px;"
              >
                <div
                  style="overflow: visible; height: 0px; width: 0px;"
                >
                  <div
                    aria-colcount="5"
                    aria-rowcount="1"
                    class="ReactVirtualized__Table makeStyles-table"
                    role="grid"
                  >
                    <div
                      class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                      role="row"
                      style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                    >
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Type
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Reason
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          From
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Message
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Age
                          <button
                            aria-label="sort swap"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <span />
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                      role="rowgroup"
                      style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDefinition List 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h1
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
          >
            Custom Resource Definitions
          </h1>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <button
              aria-label="Show filter"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span />
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 120px;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="5"
              aria-rowcount="1"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Group
                    <button
                      aria-label="sort swap"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <span />
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Scope
                    <button
                      aria-label="sort swap"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <span />
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Full name
                    <button
                      aria-label="sort swap"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <span />
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                    role="cell"
                    style="text-align: right;"
                  >
                    Age
                    <button
                      aria-label="sort up"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <span />
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
